Refine orbital strike test implementation